--- a/css/style.css
+++ b/css/style.css
@@ -53,7 +53,7 @@
   34. services block
   35. contact info
   36. contact form
-  37. sections title
+  37. sectionas title
   38. sections headings
   39. misc
   40. divider
