--- a/css/style.css
+++ b/css/style.css
@@ -63,7 +63,7 @@
 /* 1. TEMPLATE BACKGROUNDS */
 /* 1.1. single IMG BACKGROUND */
 .bg-img-SINGLE {
-background-image: url(https://drive.google.com/file/d/15EhqNZ_4v44r1j0s4K3CAG5RGAmxz-so/view?usp=share_link);
+background-image: url(https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExN2RiZGU3N2FhMDNhZjhkOTFjZjY4YjdlNzY0ZTg5NzQ4MWY1YzcyMSZjdD1n/86s0jdOwCuPGHSQpAi/giphy-downsized-large.gif);
 
 }
 
